--- a/hello.html
+++ b/hello.html
@@ -17,5 +17,10 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<div>
+			<p>
+				Bonjour je suis Eric Mourougandy, c'est ma première modification de fichier
+			</p>
+		</div>
 	
 </body></html>
