--- a/hello.html
+++ b/hello.html
@@ -17,10 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!-- Descritpion -->
 		<div>
-			<p>
-				Bonjour je suis Eric Mourougandy, c'est ma première modification de fichier
-			</p>
+			<h1>Ma description</h1>
+			<p>Bonjour je suis Eric Mourougandy, c'est ma première modification de fichier</p>
+		</div>
+		
+		<!-- Récompenses -->
+		<div>
+			<h1>Mes récompenses</h1>
+			<p>En construction</p>
 		</div>
 	
 </body></html>
