Ajout de la médaille d'argent

--- a/hello.html
+++ b/hello.html
@@ -28,7 +28,8 @@
 			<h1>Mes récompenses</h1>
 			<p>
 				<img src="images\medal_bronze.png"/>
-			</p>
+				<img src="images\medal_silver.png"/>
+		</p>
 		</div>
 		
 		<!-- gist -->
