Ajout commande git pull

--- a/hello.html
+++ b/hello.html
@@ -36,10 +36,14 @@
 		<div>
 			<h1>Mon gist</h1>
 			<p>
-				<script src="https://gist.github.com/xavihernandez/914068e25507323e8e6574dfe9db61fc.js">
-			</script></p>
+				<script src="https://gist.github.com/xavihernandez/914068e25507323e8e6574dfe9db61fc.js" ></script>
+			</p>
 		</div>
 		
-
-	
-</body></html>
+		<!-- commandes git -->
+		<div>
+			<h1>Mes commandes git</h1>
+			<p>git pull</p>
+		</div>	
+	</body>
+</html>
